// Vitest Snapshot v1

exports[`search > should with namespace 1`] = `
[
  {
    "name": "Avatar",
    "path": "src/components/global/avatar.vue",
  },
  {
    "name": "Book",
    "path": "src/components/book/index.vue",
  },
  {
    "name": "ComponentA",
    "path": "src/components/ComponentA.vue",
  },
  {
    "name": "ComponentAsync",
    "path": "src/components/ComponentAsync.vue",
  },
  {
    "name": "ComponentB",
    "path": "src/components/ComponentB.vue",
  },
  {
    "name": "ComponentC",
    "path": "src/components/component-c.vue",
  },
  {
    "name": "ComponentD",
    "path": "src/components/ComponentD.vue",
  },
  {
    "name": "Recursive",
    "path": "src/components/Recursive.vue",
  },
  {
    "name": "UiButton",
    "path": "src/components/ui/button.vue",
  },
  {
    "name": "UiNestedCheckbox",
    "path": "src/components/ui/nested/checkbox.vue",
  },
]
`;

exports[`search > should work 1`] = `
[
  {
    "name": "Avatar",
    "path": "src/components/global/avatar.vue",
  },
  {
    "name": "Book",
    "path": "src/components/book/index.vue",
  },
  {
    "name": "Button",
    "path": "src/components/ui/button.vue",
  },
  {
    "name": "Checkbox",
    "path": "src/components/ui/nested/checkbox.vue",
  },
  {
    "name": "ComponentA",
    "path": "src/components/ComponentA.vue",
  },
  {
    "name": "ComponentAsync",
    "path": "src/components/ComponentAsync.vue",
  },
  {
    "name": "ComponentB",
    "path": "src/components/ComponentB.vue",
  },
  {
    "name": "ComponentC",
    "path": "src/components/component-c.vue",
  },
  {
    "name": "ComponentD",
    "path": "src/components/ComponentD.vue",
  },
  {
    "name": "Recursive",
    "path": "src/components/Recursive.vue",
  },
]
`;
